Canvas rendering and key handling

--- a/src/WhyNotLang.Web/wwwroot/index.html
+++ b/src/WhyNotLang.Web/wwwroot/index.html
@@ -12,6 +12,7 @@
     <app>Loading...</app>
 
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="js/whynotlang.js"></script>
+    <script src="js/whynotlang.text.js"></script>
+    <script src="js/whynotlang.canvas.js"></script>
 </body>
 </html>
